--- a/views/admin/viewProducts.ejs
+++ b/views/admin/viewProducts.ejs
@@ -1,15 +1,54 @@
 <section>
-  <div class="container">
+  <div class="container shadow-lg rounded mb-5">
     <div class="row mt-4">
       <div class="d-flex flex-row-reverse">
         <div>
-          <a href="/admin/add-product" class="btn btn-success">Add Product</a>
+          <a href="/admin/add-product" class="btn btn-outline-success m-3"
+            >Add Product</a
+          >
         </div>
       </div>
     </div>
-    <table class="table table-striped mt-5">
+    <div class="container">
+      <div class="row">
+        <div class="d-flex justify-content-evenly">
+          <div
+            class="card text-dark bg-primary mb-3 p-5 bg-opacity-25 shadow"
+            style="max-width: 18rem"
+          >
+            <div class="card-body">
+              <h5 class="card-title">Total Revenue</h5>
+              <p class="card-text text-center" style="font-size: 2rem">4000₹</p>
+            </div>
+          </div>
+          <div
+            class="card text-dark bg-secondary mb-3 p-5 bg-opacity-25 shadow"
+            style="max-width: 18rem"
+          >
+            <div class="card-body">
+              <h5 class="card-title">Total Orders</h5>
+              <p class="card-text text-center" style="font-size: 2rem">300</p>
+            </div>
+          </div>
+          <div
+            class="card text-dark bg-success mb-3 p-5 bg-opacity-25 shadow"
+            style="max-width: 18rem"
+          >
+            <div class="card-body">
+              <h5 class="card-title">Total Users</h5>
+              <p class="card-text text-center" style="font-size: 2rem">234</p>
+            </div>
+          </div>
+        </div>
+      </div>
+    </div>
+    <table
+      class="table table-fluid table-hover table-bordered mt-5 pt-2"
+      style="text-align: center"
+      id="myTable"
+    >
       <thead>
-        <tr>
+        <tr class="bg-dark text-white">
           <th scope="col">No</th>
           <th scope="col">Title</th>
           <th scope="col">Price</th>
@@ -17,13 +56,14 @@
           <th scope="col">Sub Category</th>
           <th scope="col">Description</th>
           <th scope="col">Image</th>
-        </tr> 
+          <th scope="col">Edit/Delete</th>
+        </tr>
       </thead>
       <% var No=1 %>
       <tbody>
         <% locals.products.forEach(product=>{%>
         <tr>
-          <th scope="row"><%=No %></th>
+          <th scope="row"><%=No++ %></th>
           <td><%=product.Name %></td>
           <td><%=product.Price %></td>
           <td><%=product.Category %></td>
@@ -37,7 +77,19 @@
             />
             %>
           </td>
-          <% No++ %>
+          <td>
+            <a
+              href="/admin/edit-product/<%=product._id %>"
+              class="btn btn-outline-primary"
+              >Edit</a
+            >
+            <a
+              href="/admin/delete-product/<%=product._id %>"
+              class="btn btn-outline-danger"
+              onclick="return confirm('Do you want to delete <%=product.Name %> ?')"
+              >Delete</a
+            >
+          </td>
         </tr>
         <%})%>
       </tbody>
