--- a/views/users/home.ejs
+++ b/views/users/home.ejs
@@ -52,8 +52,8 @@
   <div class="container-fluid mt-5">
     <div class="row">
       <% locals.products.forEach(product=>{%>
-      <div class="col-md-3 col-sm-6 p-3 d-flex justify-content-evenly">
-        <div class="card shadow rounded" style="width: 18rem">
+      <div class="col-md-3 col-sm-6 p-3 d-flex justify-content-center">
+        <div class="card shadow rounded" style="width: 16rem">
           <div>
             <img
               src="users/productImages/<%= product._id %>.jpg"
