--- a/views/users/signup.ejs
+++ b/views/users/signup.ejs
@@ -1,10 +1,10 @@
-<section class="h-100 bg-light">
+<section class="h-100" style="background-color: #dbc89c">
     <div class="container py-5 h-100">
       <div class="row d-flex justify-content-center align-items-center h-100">
         <div class="col">
           <div class="card card-registration my-4">
             <div class="row g-0">
-              <div class="col-xl-6 d-none d-xl-block">
+              <div class="col-xl-6 d-none d-xl-block" style="background-color: #ede2c8">
                 <img
                   src="users/images/gallery-02.jpg"
                   alt="Sample photo"
@@ -17,7 +17,7 @@
               </div>
   
               <div class="col-xl-6">
-                <div class="card-body p-md-5 text-black">
+                <div class="card-body p-md-5 text-black" style="background-color: #ede2c8">
                   <h3 class="mb-5 text-uppercase">SIGNUP FORM</h3>
                   <form
                     action="/signup"
@@ -33,6 +33,7 @@
                             class="form-control form-control-lg"
                             name="firstname"
                             id="firstname"
+                            style="background-color: #f0e9d9"
                             placeholder="First name"
                           />
                           <!-- <p class="text-danger">locals.nameMsg</p> -->
@@ -45,6 +46,7 @@
                             class="form-control form-control-lg"
                             name="lastname"
                             id="lastname"
+                            style="background-color: #f0e9d9"
                             placeholder="last name"
                           />
                         </div>
@@ -57,6 +59,7 @@
                         class="form-control form-control-lg"
                         name="username"
                         id="username"
+                        style="background-color: #f0e9d9"
                         placeholder="Username"
                       />
                       <!-- <p class="text-danger">locals.usernameMsg</p> -->
@@ -68,6 +71,7 @@
                         class="form-control form-control-lg"
                         name="email"
                         id="email"
+                        style="background-color: #f0e9d9"
                         placeholder="Email ID"
                       />
                       <!-- <p class="text-danger">locals.emailMsg</p> -->
@@ -79,6 +83,7 @@
                         class="form-control form-control-lg"
                         name="password"
                         id="password"
+                        style="background-color: #f0e9d9"
                         placeholder="Password"
                       />
                       <!-- <p class="text-danger">locals.pwdMsg</p> -->
@@ -90,6 +95,7 @@
                         class="form-control form-control-lg"
                         name="confirmpassword"
                         id="password"
+                        style="background-color: #f0e9d9"
                         placeholder="Confirm Password"
                       />
                       <!-- <p class="text-danger">locals.confirmpwdMsg</p> -->
@@ -101,6 +107,7 @@
                         class="form-control form-control-lg"
                         name="mobilenumber"
                         id="mobilenumber"
+                        style="background-color: #f0e9d9"
                         placeholder="Mobile Number"
                       />
                       <!-- <p class="text-danger">locals.mobileMsg</p> -->
