--- a/views/layouts/expoStoreLayout.ejs
+++ b/views/layouts/expoStoreLayout.ejs
@@ -15,12 +15,23 @@
       src="https://kit.fontawesome.com/db194f7475.js"
       crossorigin="anonymous"
     ></script>
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
+    <link
+      rel="stylesheet"
+      href="https://cdn.datatables.net/1.12.1/css/jquery.dataTables.min.css"
+    />
+    <script src="https://cdn.datatables.net/1.12.1/js/jquery.dataTables.min.js"></script>
   </head>
   <body>
     <% if(locals.admin){ %> <%-include("../partials/adminHeader") %> <% }else{%>
     <%-include("../partials/userHeader") %> <% } %> <%- body %>
     <!-- <div style="height: 25px" class="bg-primary"></div> -->
     <% if(!locals.admin){ %> <%-include("../partials/userFooter") %> <% } %>
+    <script>
+      $(document).ready(function () {
+        $("#myTable").DataTable();
+      });
+    </script>
     <script
       src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/js/bootstrap.bundle.min.js"
       integrity="sha384-OERcA2EqjJCMA+/3y+gxIOqMEjwtxJY7qPCqsdltbNJuaOe923+mo//f6V8Qbsw3"
