--- a/views/layouts/expoStoreLayout.ejs
+++ b/views/layouts/expoStoreLayout.ejs
@@ -11,6 +11,7 @@
       crossorigin="anonymous"
     />
     <link rel="stylesheet" href="users/styles/cardHover.css" />
+    <link rel="stylesheet" href="users/styles/validation.css" />
     <script
       src="https://kit.fontawesome.com/db194f7475.js"
       crossorigin="anonymous"
