--- a/views/partials/userHeader.ejs
+++ b/views/partials/userHeader.ejs
@@ -62,6 +62,9 @@
               <a class="dropdown-item" style="color: #b0aeae" href="/login"
                 >Login</a
               >
+              <a class="dropdown-item" style="color: #b0aeae" href="/signup"
+                >Signup</a
+              >
               <%}%>
             </li>
             <!-- <li>
