--- a/views/layouts/expoStoreLayout.ejs
+++ b/views/layouts/expoStoreLayout.ejs
@@ -22,6 +22,7 @@
       href="https://cdn.datatables.net/1.12.1/css/jquery.dataTables.min.css"
     />
     <script src="https://cdn.datatables.net/1.12.1/js/jquery.dataTables.min.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
   </head>
   <body>
     <% if(locals.admin){ %> <%-include("../partials/adminHeader") %> <% }else{%>
