--- a/views/partials/adminHeader.ejs
+++ b/views/partials/adminHeader.ejs
@@ -18,16 +18,16 @@
       <div class="collapse navbar-collapse" id="navbarSupportedContent">
         <ul class="navbar-nav me-auto mb-2 mb-lg-0">
           <li class="nav-item">
-            <a class="nav-link active" aria-current="page" href="#">Home</a>
+            <a class="nav-link" aria-current="page" href="/admin">Home</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="/admin/products">Products</a>
+            <a class="nav-link" href="/admin/view-product">Products</a>
           </li>
           <li class="nav-item">
             <a class="nav-link" href="#">Orders</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="#">Users</a>
+            <a class="nav-link" href="/admin/view-users">Users</a>
           </li>
         </ul>
       </div>
