--- a/views/users/login.ejs
+++ b/views/users/login.ejs
@@ -14,7 +14,7 @@
             </div>
             <div class="col-md-6 col-lg-7 d-flex align-items-center">
               <div class="card-body p-4 p-lg-5 text-black">
-                <form action="/login" method="post">
+                <form action="/login" method="post" id="loginFormValidation">
                   <h5
                     class="fw-normal mb-3 pb-3"
                     style="font-size: 50px; font-family: Arial, sans-serif"
@@ -26,12 +26,14 @@
                     <input
                       type="email"
                       name="email"
-                      id="form2Example17"
+                      id="email"
                       class="form-control form-control-lg"
+                      placeholder="Email ID"
+                      required
                     />
-                    <label class="form-label" for="form2Example17"
+                    <!-- <label class="form-label" for="email"
                       >Email address</label
-                    >
+                    > -->
                   </div>
 
                   <div class="form-outline mb-4">
@@ -40,29 +42,47 @@
                       name="password"
                       id="form2Example27"
                       class="form-control form-control-lg"
+                      placeholder="Password"
                     />
-                    <label class="form-label" for="form2Example27"
+                    <!-- <label class="form-label" for="password"
                       >Password</label
-                    >
+                    > -->
                   </div>
+
+                  <% if (locals.access === false){ %>
+                  <p class="text-danger"><%= locals.blockedMessage %></p>
+                  <% } %>
 
                   <% if (locals.loginErr){ %>
                   <p class="text-danger m-auto"><%= locals.loginErr %></p>
                   <% } %>
 
                   <div class="pt-1 mb-4">
-                    <button class="btn btn-dark btn-lg btn-block" type="submit">
+                    <button
+                      class="btn btn-dark btn-lg btn-block"
+                      id="popupBtn"
+                      type="submit"
+                    >
                       Login
                     </button>
                   </div>
 
-                  <a class="small text-muted" href="#!">Forgot password?</a>
+                  <a
+                    class="small text-muted"
+                    href="#!"
+                    style="text-decoration: none"
+                    >Forgot password?</a
+                  >
                   <p class="mb-5 pb-lg-2" style="color: #393f81">
-                    Don't have an account?
-                    <a href="/signup" style="color: #393f81">Register here</a>
+                    NewBee?
+                    <a
+                      href="/signup"
+                      style="color: #393f81; text-decoration: none"
+                      >Register here</a
+                    >
                   </p>
-                  <a href="#!" class="small text-muted">Terms of use.</a>
-                  <a href="#!" class="small text-muted">Privacy policy</a>
+                  <!-- <a href="#!" class="small text-muted">Terms of use.</a>
+                  <a href="#!" class="small text-muted">Privacy policy</a> -->
                 </form>
               </div>
             </div>
@@ -70,5 +90,40 @@
         </div>
       </div>
     </div>
-  </div>
+    <!-- <div
+      class="card bg-danger text-center"
+      id="popupContainer"
+      style="
+        position: absolute;
+        left: 25%;
+        right: 25%;
+        top: 25%;
+        bottom: 50%;
+        display: none;
+      "
+    >
+      <div class="card-body model">
+        <p class="card-title display-1 text-white">You are blocked</p>
+        <a href="#" class="btn bg-white text-danger" id="closeBtn">Close</a>
+      </div>
+    </div>
+  </div> -->
 </section>
+
+<!-- <script>
+  $(document).ready(function () {
+    //show popup
+    $("#popupBtn").click(function () {
+      $("#popupContainer").show();
+    });
+
+    //close popup
+    $("#closeBtn").click(function () {
+      $("#popupContainer").hide();
+    });
+  });
+</script> -->
+<script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
+<script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/jquery-validate/1.19.3/jquery.validate.min.js"></script>
+
+<script text="text/javascript" src="/users/javascript/loginValidation.js"></script>
