--- a/views/partials/adminHeader.ejs
+++ b/views/partials/adminHeader.ejs
@@ -30,6 +30,34 @@
             <a class="nav-link" href="/admin/view-users">Users</a>
           </li>
         </ul>
+        <div class="dropdown me-2">
+          <a
+            class="btn btn-light dropdown-toggle"
+            href="#"
+            role="button"
+            id="dropdownMenuLink"
+            data-bs-toggle="dropdown"
+            aria-expanded="false"
+          >
+            <i class="fa-regular fa-user"></i>
+            &nbsp; <% if(locals.adminData) {%> <%= locals.adminData.username %>
+            <% }else{ %> Account <% } %>
+          </a>
+
+          <ul
+            class="dropdown-menu bg-opacity-25"
+            aria-labelledby="dropdownMenuLink"
+          >
+            <li>
+              <% if(locals.adminData) {%>
+              <a class="dropdown-item" href="/admin/logout">Logout</a>
+              <a class="dropdown-item" href="/admin/signup">Create Admin</a>
+              <% }else{ %>
+              <a class="dropdown-item" href="/admin/login">Login</a>
+              <% } %>
+            </li>
+          </ul>
+        </div>
       </div>
     </div>
   </nav>
