category on progress
Delete product done.

--- a/views/admin/editProduct.ejs
+++ b/views/admin/editProduct.ejs
@@ -6,7 +6,7 @@
     <div class="row justify-content-center align-items-center">
       <div class="col-md-6">
         <div>&nbsp;</div>
-        <h2 class="text-center">Edit Product</h2>
+        <h2 class="text-center">Update Product</h2>
         <form
           action="/admin/edit-product/<%= product._id  %>"
           method="post"
