--- a/views/admin/viewProducts.ejs
+++ b/views/admin/viewProducts.ejs
@@ -48,7 +48,7 @@
             <a
               href="/admin/edit-product/<%=product._id %>"
               class="btn btn-outline-primary"
-              >Edit</a
+              >Update</a
             >
             <a
               href="/admin/delete-product/<%=product._id %>"
