--- a/views/users/login.ejs
+++ b/views/users/login.ejs
@@ -14,7 +14,7 @@
             </div>
             <div class="col-md-6 col-lg-7 d-flex align-items-center">
               <div class="card-body p-4 p-lg-5 text-black">
-                <form action="/login" method="post" id="loginFormValidation">
+                <form action="/login" method="post" id="formValidation">
                   <h5
                     class="fw-normal mb-3 pb-3"
                     style="font-size: 50px; font-family: Arial, sans-serif"
