--- a/views/partials/adminHeader.ejs
+++ b/views/partials/adminHeader.ejs
@@ -24,10 +24,13 @@
             <a class="nav-link" href="/admin/view-product">Products</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="#">Orders</a>
+            <a class="nav-link" href="/admin/view-users">Users</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="/admin/view-users">Users</a>
+            <a class="nav-link" href="/admin/view-category">Categories</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="#">Orders</a>
           </li>
         </ul>
         <div class="dropdown me-2">
