Sub category delete

--- a/views/admin/addCategory.ejs
+++ b/views/admin/addCategory.ejs
@@ -25,8 +25,11 @@
             type="text"
             name="subcategory"
             class="form-control mt-3"
-            placeholder="Subcategories"
+            placeholder="Sub-categories"
           />
+          <p>
+            * add Sub-categories separated by commas (eg. Shirt,T-shirt,Hoodie)
+          </p>
 
           <button type="submit" class="btn btn-success mt-4">Submit</button>
           <div>&nbsp;</div>
