--- a/views/users/getMobile.ejs
+++ b/views/users/getMobile.ejs
@@ -5,25 +5,23 @@
         class="card p-2 shadow text-center"
         style="width: 22rem; height: 16rem"
       >
-        <form action="/loginOTP" method="post" id="formValidation">
-          <div class="pt-3">
-            <i class="display-3 fa-solid fa-mobile text-secondary"></i>
+        <form action="/getMobile" method="post" id="formValidation">
+          <i class="p-3 display-3 fa-solid fa-mobile text-secondary"></i>
+          <div>
             <!-- <p class="text-danger m-auto">locals.OTPerr</p> -->
-            <span class="d-block"
-              >Enter the OTP sent to <%=locals.mobile %>
-            </span>
+            <span>Please enter your mobile number to Login</span>
           </div>
           <div class="inputs d-flex flex-row justify-content-center mt-2">
             <input
               class="m-2 text-center form-control rounded"
               type="number"
-              name="OTP"
+              name="mobilenumber"
               required
             />
+            <% if (locals.loginErr){ %>
+            <p class="text-danger m-auto"><%=locals.loginErr %></p>
+            <% } %>
           </div>
-          <% if (locals.errMsg) { %>
-          <p class="text-danger m-auto"><%=locals.errMsg %></p>
-          <% } %>
           <div class="mt-3 pb-2">
             <button type="submit" class="btn btn-outline-secondary px-4">
               Submit
