--- a/views/layouts/expoStoreLayout.ejs
+++ b/views/layouts/expoStoreLayout.ejs
@@ -16,6 +16,10 @@
       src="https://kit.fontawesome.com/db194f7475.js"
       crossorigin="anonymous"
     ></script>
+    <script
+      src="https://unpkg.com/js-image-zoom@0.4.1/js-image-zoom.js"
+      type="application/javascript"
+    ></script>
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
     <link
       rel="stylesheet"
