--- a/views/partials/userHeader.ejs
+++ b/views/partials/userHeader.ejs
@@ -1,11 +1,16 @@
 <header>
   <nav
-    class="navbar fixed-top navbar-expand-lg navbar-dark bg-opacity-75 bg-dark py-0"
+    class="navbar fixed-top navbar-expand-lg navbar-dark bg-opacity-75 bg-dark p-0"
   >
     <div class="container-fluid">
-      <a class="navbar-brand px-5" href="/"
-        ><h3><b>EXPO</b>store-user</h3></a
-      >
+      <a class="navbar-brand pe-3 ps-3" href="/">
+        <img
+          src="/users/images/logos/EXPO-store.png"
+          width="250"
+          alt=""
+          class="d-inline-block align-middle mr-2"
+        />
+      </a>
       <button
         class="navbar-toggler"
         type="button"
