--- a/views/users/home.ejs
+++ b/views/users/home.ejs
@@ -8,21 +8,21 @@
     <div class="carousel-inner">
       <div class="carousel-item active">
         <img
-          src="users/images/blog-05.jpg"
+          src="users/images/Carousel1.png"
           class="d-block w-100"
           alt="First slide"
         />
       </div>
       <div class="carousel-item">
         <img
-          src="users/images/blog-04.jpg"
+          src="users/images/Carousel-1.png"
           class="d-block w-100"
           alt="Second slide"
         />
       </div>
       <div class="carousel-item">
         <img
-          src="users/images/blog-06.jpg"
+          src="users/images/Carousel-3.png"
           class="d-block w-100"
           alt="Third slide"
         />
@@ -48,11 +48,40 @@
     </button>
   </div>
 
+  <div class="pb-3" style="background-color: #ddc898">
+    <!-- Example split danger button -->
+    <div class="btn-group zindex-offcanvas mt-3">
+      <button type="button" class="btn btn-outline-secondary text-dark ms-5">
+        Category
+      </button>
+      <button
+        type="button"
+        class="btn btn-outline-secondary dropdown-toggle dropdown-toggle-split"
+        data-bs-toggle="dropdown"
+        aria-expanded="false"
+      >
+        <span class="visually-hidden">Toggle Dropdown</span>
+      </button>
+      <ul class="dropdown-menu opacity-75" style="background-color: #dbbf80">
+        <li>
+          <a class="dropdown-item" href="#">All products</a>
+        </li>
+        <li>
+          <% locals.category.forEach((category)=>{ %>
+            <a class="dropdown-item" href="#"><%=category.category  %> </a>
+        </li>
+            <% }) %>
+          <!-- <li><a class="dropdown-item" href="#">Something else here</a></li> -->
+        </li>
+      </ul>
+    </div>
+  </div>
+
   <!-- products -->
-  <div class="container-fluid mt-5">
-    <div class="row">
+  <div class="container-fluid mt-5 list-wrapper">
+    <div class="row list-item">
       <% locals.products.forEach(product=>{%>
-      <div class="col-md-3 col-sm-6 p-3 d-flex justify-content-center">
+      <div class=" col-md-3 col-sm-6 p-3 d-flex justify-content-center">
         <div class="card shadow rounded" style="width: 16rem">
           <div>
             <a href="/singleProduct/<%= product._id %>">
@@ -83,5 +112,28 @@
       </div>
       <% }) %>
     </div>
+    <!-- <div id="pagination-container"></div> -->
   </div>
 </section>
+
+<!-- <script src="https://cdnjs.cloudflare.com/ajax/libs/simplePagination.js/1.6/jquery.simplePagination.min.js"></script> -->
+
+<!-- <script>
+
+  const items = $(".list-wrapper .list-item")
+  const numItems = items.length;
+  const perPage =12;
+  items.slice(perPage).hide();
+
+  $("#pagination-container").pagination({
+    items: numItems,
+    itemsOnPage: perPage,
+    prevText:"<",
+    nextText:">",
+    onPageClick: function(PageNumber){
+      const showFrom = perPage * (PageNumber-1);
+      const showTo = showFrom + perPage;
+      items.hide().slice(showFrom,showTo).show();
+    }
+  })
+</script> -->
