--- a/views/users/signup.ejs
+++ b/views/users/signup.ejs
@@ -19,7 +19,7 @@
   
               <div class="col-xl-6">
                 <div class="card-body text-black" style="background-color: #ede2c8">
-                  <h3 class="mb-5 text-uppercase">SIGNUP FORM</h3>
+                  <h3 class="mb-5 text-uppercase d-flex justify-content-center">SIGNUP FORM</h3>
                   <form
                     action="/signup"
                     id="formValidation"
