--- a/views/layouts/expoStoreLayout.ejs
+++ b/views/layouts/expoStoreLayout.ejs
@@ -4,6 +4,8 @@
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <title>ExpoStore</title>
+
+    <!-- Bootstrap -->
     <link
       href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/css/bootstrap.min.css"
       rel="stylesheet"
@@ -12,20 +14,33 @@
     />
     <link rel="stylesheet" href="users/styles/cardHover.css" />
     <link rel="stylesheet" href="users/styles/validation.css" />
+
+    <!-- icons  -->
     <script
       src="https://kit.fontawesome.com/db194f7475.js"
       crossorigin="anonymous"
     ></script>
+
+    <!-- image-zoom -->
     <script
       src="https://unpkg.com/js-image-zoom@0.4.1/js-image-zoom.js"
       type="application/javascript"
     ></script>
+
+    <!-- jquery -->
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
     <link
       rel="stylesheet"
       href="https://cdn.datatables.net/1.12.1/css/jquery.dataTables.min.css"
     />
+
+    <!-- sweet-alert2 -->
+    <script src="//cdn.jsdelivr.net/npm/sweetalert2@11"></script>
+
+    <!-- datatable -->
     <script src="https://cdn.datatables.net/1.12.1/js/jquery.dataTables.min.js"></script>
+
+    <!-- chart -->
     <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
   </head>
   <body>
