--- a/views/admin/addProduct.ejs
+++ b/views/admin/addProduct.ejs
@@ -41,10 +41,13 @@
           </select>
 
           <label for="" class="mt-2">Price</label>
-          <input type="text" name="Price" class="form-control" />
+          <input type="number" name="Price" class="form-control" />
 
           <label for="" class="mt-2">Description</label>
           <input type="text" name="Description" class="form-control" />
+
+          <label for="" class="mt-2">Quantity</label>
+          <input type="number" name="Quantity" class="form-control" />
 
           <!-- <label for="" class="mt-2">Image</label>
           <input type="file" name="Image" class="form-control" multiple /> -->
