--- a/views/admin/viewProducts.ejs
+++ b/views/admin/viewProducts.ejs
@@ -48,12 +48,11 @@
             <a
               href="/admin/edit-product/<%=product._id %>"
               class="btn btn-outline-primary"
-              >Update</a
+              >Edit</a
             >
             <a
               href="/admin/delete-product/<%=product._id %>"
-              class="btn btn-outline-danger"
-              onclick="return confirm('Do you want to delete <%=product.Name %> ?')"
+              class="btn btn-outline-danger deleteProduct"
               >Delete</a
             >
           </td>
@@ -63,3 +62,27 @@
     </table>
   </div>
 </section>
+
+<!-- onclick="return confirm('Do you want to delete product.Name ?')" -->
+
+<script>
+  $(".deleteProduct").on("click", function (e) {
+    e.preventDefault();
+    var self = $(this);
+    console.log(self.data("title"));
+    Swal.fire({
+      title: "Are you sure?",
+      text: "You won't be able to revert this!",
+      icon: "warning",
+      showCancelButton: true,
+      confirmButtonColor: "#3085d6",
+      cancelButtonColor: "#d33",
+      confirmButtonText: "Yes, delete it!",
+    }).then((result) => {
+      if (result.isConfirmed) {
+        Swal.fire("Deleted!", ` Product has been deleted`, "success");
+        location.href = self.attr("href");
+      }
+    });
+  });
+</script>
