--- a/views/partials/userHeader.ejs
+++ b/views/partials/userHeader.ejs
@@ -30,14 +30,23 @@
           <li class="nav-item">
             <a class="nav-link" href="/">Products</a>
           </li>
-          <li class="nav-item">
-            <a class="nav-link" href="/cart">Cart</a>
-          </li>
           <% if(locals.user){ %>
+          <li class="nav-item">
+            <a class="nav-link" href="#">Cart</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="#">Wishlist</a>
+          </li>
           <li class="nav-item">
             <a class="nav-link" href="#">Orders</a>
           </li>
           <% } %>
+          <li class="nav-item">
+            <a class="nav-link" href="#">About</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="#">Contact</a>
+          </li>
         </ul>
         <div class="dropdown me-2">
           <a
